--- a/ignite/gallery/templates/gallery/index.html
+++ b/ignite/gallery/templates/gallery/index.html
@@ -1,11 +1,11 @@
 {% extends "gallery/base.html" %}
 
 {% block content %}
-    <h1>Project Gallery</h1>
+    <h1>USU Project Gallery</h1>
     <div class="gallery">
         {% for project in projects_list %}
         <div class="project-item">
-            <a href="project/{{project.id}}">
+            <a href="{% url 'project_view' project_id=project.id%}">
                 <img src="{{ project.image.url }}" alt="{{ project.name }}" class="project-image">
                 <p>{{ project.name }}</p>
             </a>
