create navigation bar better and add content

--- a/ignite/gallery/static/gallery/form.css
+++ b/ignite/gallery/static/gallery/form.css
@@ -84,3 +84,9 @@
         background-color: #ddd; /* Light gray background color */
     }
 }
+
+.instructions {
+    font-size: 12px;
+    margin-top: 5px;
+    color: #777;
+}
