--- a/ignite/gallery/templates/gallery/form.html
+++ b/ignite/gallery/templates/gallery/form.html
@@ -1,7 +1,9 @@
 {% extends "gallery/base.html" %}
 
 {% block content %}
-    <h1>Project Submission Form</h1>
+    <div class="category-block">
+        <h2>Project Submission Form</h2>
+    </div>
     <div class="form-body">
         <form action="" method="post" enctype="multipart/form-data" class="form-container">
             {% csrf_token %}
