ready for production

--- a/ignite/gallery/templates/gallery/completed_form.html
+++ b/ignite/gallery/templates/gallery/completed_form.html
@@ -1,5 +1,8 @@
 {% extends "gallery/base.html" %}
 
 {% block content %}
-    <h1>Thank you for completing the survey!</h1>
+    <h1>Thank you for completing the survey! Click + Add Project to add an additional project or go look at other projects in the gallery</h1>
+    <div class="third-block">
+        <p class="warning-text">We are working on a feature to allow students to edit and remove their own projects. If you submit more than 3 projects, the most recent 3 projects will be kept and older projects will be removed. If you would like a project to be removed please email that request to mark.soulier@usu.edu</p>
+      </div>
 {% endblock %}
