--- a/ignite/gallery/templates/gallery/home_description.html
+++ b/ignite/gallery/templates/gallery/home_description.html
@@ -5,15 +5,15 @@
 {% comment %} Content for making the home page  {% endcomment %}
 
 <div class="first-block">
-    <h2>Welcome to the IEEE Project Platform</h2>
+    <h2>Welcome to the USU Ignite Engineering Project Platform</h2>
   </div>
   
   <div class="second-block">
-    <p>This website is a project of IEEE to create a platform where students can post their engineering projects. The advantage of doing so is that other students can see what each other are doing, as well as faculty and the industry. Each student can have up to 3 projects on the platform, and we encourage every student to post their top projects.</p>
+    <p>This website is a project of IEEE to create a platform where students can post their engineering projects. The advantage of doing so is that other students can see what each other are doing, as well as faculty and the industry. Each participant can have up to 3 projects on the platform, and we encourage every student to post their top 3 projects.</p>
   </div>
   
   <div class="third-block">
-    <p class="warning-text">This website is currently being developed. Please let us know any bugs or desired features. If you have a desire to help develop this website please reachout to IEEE. </p>
+    <p class="warning-text">This website is currently being developed. Please let us know any bugs or desired features. If you have a desire to help develop this website please reachout to IEEE. usuieee@usu.edu</p>
   </div>
 
 {% endblock %}
