--- a/ignite/gallery/templates/gallery/home_description.html
+++ b/ignite/gallery/templates/gallery/home_description.html
@@ -9,7 +9,9 @@
   </div>
   
   <div class="second-block">
-    <p>This website is a project of IEEE to create a platform where students can post their engineering projects. The advantage of doing so is that other students can see what each other are doing, as well as faculty and the industry. Each participant can have up to 3 projects on the platform, and we encourage every student to post their top 3 projects.</p>
+    <p>This website is a project of IEEE to create a platform where students can post their engineering projects. 
+    The advantage of doing so is that other students can see what each other are doing, as well as faculty and the industry. Each participant can have up to 3 projects on the platform, and we encourage every student to post the 3 projects closest to their heart.
+    These projects can be anywhere from a proud lego set you built when you were 15 to a state of the art language learning model you built for your PHD</p>
   </div>
   
   <div class="third-block">
